--- a/index.html
+++ b/index.html
@@ -13,18 +13,17 @@
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
 </head>
 <body>
+  <div class="container">
     <div class="card">
       <div class="card-image">
-        <img src="images/image-qr-code.png" alt="qr code">
+        <img src="images/image-qr-code.png" alt="QR Code">
       </div>
       <div class="text">
         <h3>Improve your front-end skills by building projects</h3>
         <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
-      </div>   
+      </div>
     </div>
-    <!--<div class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
-    </div>-->
+    
+  </div>
 </body>
 </html>
